--- a/style.scss
+++ b/style.scss
@@ -1,21 +1,16 @@
-body,
-html {
+* {
   margin: 0;
   padding: 0;
-  height: 100%;
+  box-sizing: border-box;
 }
 
 body {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("./images/vraisky.jpeg");
-  animation: moveBackground 50s infinite linear;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
+  background-color: black;
 
   .menu {
     display: flex;
@@ -33,20 +28,20 @@ body {
       width: 50px;
       margin-left: 100px;
     }
-  
   }
 
-.menu__icon a{
-  font-size: 30px;
-   text-decoration: none;
-   color: white;
-   margin-right: 100px;
-
-}
+  .menu__icon a {
+    font-size: 30px;
+    text-decoration: none;
+    color: white;
+    margin-right: 100px;
+  }
   .menu__icon .icon {
     font-size: 30px;
   }
   .contain {
+    background-image: url("./images/vraisky.jpeg");
+    animation: moveBackground 50s infinite linear;
     color: white;
     text-align: center;
     margin-top: 150px;
@@ -59,14 +54,82 @@ body {
       transform-origin: 70% 70%;
       display: inline-block;
     }
+    .name,
+    .contain__text {
+      background-image: linear-gradient(30deg, red, purple);
+      color: transparent;
+      background-clip: text;
+    }
+    .contain__text {
+      overflow: hidden;
+      white-space: nowrap;
+      margin: 0 auto;
+      margin-top: 50px;
+      font-size: 40px;
+      animation: juniordevelopper 3s steps(50) forwards infinite,
+        blink-caret 0.2s step-end infinite alternate;
+    }
+    .contain__cards--img {
+      margin-top: 50px;
+      width: 500px;
+      height: 500px;
+    }
+  }
+}
+.about-me {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .about-me__title{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 35px;
+    font-weight: bolder;
+    font-style: italic;
+    background-image: linear-gradient(30deg, red, purple);
+      color: transparent;
+      background-clip: text;
+  }
+
+  .about-me__card-1 {
+    color: white;
+    margin-bottom: 50px;
+    font-size: 25px;
+    word-spacing: 5px;
+
     .name {
       background-image: linear-gradient(30deg, red, purple);
       color: transparent;
       background-clip: text;
     }
   }
+  .about-me__card-2 {
+    .about-me__img{
+      width: 500px;
+      height: 500px;
+      border-radius: 50%;
+      box-shadow: 2px 2px 10px 5px purple;
+    }
+  }
 }
 
+@keyframes juniordevelopper {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+}
 @keyframes hand-animation {
   0% {
     transform: rotate(0deg);
@@ -102,20 +165,18 @@ body {
     background-position: 100% 100%;
   }
 }
-@media(max-width:768px){
-  .menu__icon{
+@media (max-width: 768px) {
+  .menu__icon {
     display: none;
   }
+}
+.menu__icon--link .icon {
+  font-size: 50px;
+  width: 100px;
+}
 
-  }
-  .menu__icon--link .icon{
-    font-size: 50px;
-    width: 100px;
-  }
-
-
-@media(min-width:768px){
-  .menu__icon .menu__incon--link{
+@media (min-width: 768px) {
+  .menu__icon .menu__incon--link {
     display: block;
   }
 }
