--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  background-image: url("./images/vraisky.jpeg");
+  animation: moveBackground 50s infinite linear;
   width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
@@ -12,7 +14,8 @@ body {
   font-style: normal;
   background-color: black;
 }
-body .menu {
+
+.menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,42 +26,51 @@ body .menu {
   top: 0;
   left: 0;
 }
-body .menu .logo__img {
+.menu .logo__img {
   height: 50px;
   width: 50px;
   margin-left: 100px;
 }
-body .menu__icon a {
-  font-size: 30px;
+
+.menu-items {
+  display: none;
+}
+
+.menu__wrapper a {
+  font-size: 20px;
   text-decoration: none;
   color: white;
-  margin-right: 100px;
+  margin-right: 50px;
 }
-body .menu__icon .icon {
-  font-size: 30px;
+
+a:hover {
+  color: red;
 }
-body .contain {
-  background-image: url("./images/vraisky.jpeg");
-  animation: moveBackground 50s infinite linear;
+
+.menu__wrapper .icon {
+  font-size: 20px;
+}
+
+.contain {
+  height: 100vh;
   color: white;
   text-align: center;
   margin-top: 150px;
   font-size: 40px;
 }
-body .contain .hand {
+.contain .hand {
   animation-duration: 2.1s;
   animation-iteration-count: infinite;
   animation-name: hand-animation;
-  transform-origin: 70% 70%;
   display: inline-block;
 }
-body .contain .name,
-body .contain .contain__text {
+.contain .name,
+.contain .contain__text {
   background-image: linear-gradient(30deg, red, purple);
   color: transparent;
   background-clip: text;
 }
-body .contain .contain__text {
+.contain .contain__text {
   overflow: hidden;
   white-space: nowrap;
   margin: 0 auto;
@@ -66,13 +78,15 @@ body .contain .contain__text {
   font-size: 40px;
   animation: juniordevelopper 3s steps(50) forwards infinite, blink-caret 0.2s step-end infinite alternate;
 }
-body .contain .contain__cards--img {
+.contain .contain__cards--img {
   margin-top: 50px;
   width: 500px;
   height: 500px;
 }
 
 .about-me {
+  height: 100vh;
+  animation: moveBackground 50s infinite linear;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
@@ -105,6 +119,71 @@ body .contain .contain__cards--img {
   height: 500px;
   border-radius: 50%;
   box-shadow: 2px 2px 10px 5px purple;
+}
+
+.contact__title {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 50px;
+  font-weight: bolder;
+  font-style: italic;
+  background-image: linear-gradient(30deg, red, purple);
+  color: transparent;
+  background-clip: text;
+}
+
+.contact {
+  height: 100vh;
+}
+
+.contact-wrapper {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.contact-wrapper .contact-card-1__title {
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+.contact-wrapper .contact__text {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.contact-wrapper .contact__text p {
+  padding: 10px;
+}
+.contact-wrapper .icon {
+  font-size: 30px;
+  margin: 20px;
+}
+.contact-wrapper input {
+  width: 300px;
+  height: 40px;
+  margin: 10px 0px;
+  box-shadow: 2px 2px 10px 2px purple;
+}
+.contact-wrapper textarea {
+  box-shadow: 2px 2px 10px 2px purple;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  height: 100px;
+  padding: 0px 20px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+footer .icon {
+  font-size: 20px;
+  margin: 5px;
 }
 
 @keyframes juniordevelopper {
@@ -155,18 +234,32 @@ body .contain .contain__cards--img {
   }
 }
 @media (max-width: 768px) {
-  .menu__icon {
-    display: none;
+  .menu__icon--link .icon {
+    font-size: 50px;
+    width: 100px;
   }
 }
-.menu__icon--link .icon {
-  font-size: 50px;
-  width: 100px;
-}
-
 @media (min-width: 768px) {
-  .menu__icon .menu__incon--link {
+  .menu-items {
     display: block;
+  }
+  .menu__icon--link {
+    display: none;
+  }
+  .about-me {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .contact-wrapper {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  footer {
+    font-size: 30px;
+  }
+  footer .icon {
+    font-size: 30px;
+    margin: 10px;
   }
 }
 
