--- a/style.scss
+++ b/style.scss
@@ -5,93 +5,103 @@
 }
 
 body {
+  background-image: url("./images/vraisky.jpeg");
+  animation: moveBackground 50s infinite linear;
   width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
   background-color: black;
+}
 
-  .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 100px;
-    background-color: rgba(148, 113, 113, 0.107);
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  background-color: rgba(148, 113, 113, 0.107);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
 
-    .logo__img {
-      height: 50px;
-      width: 50px;
-      margin-left: 100px;
-    }
-  }
-
-  .menu__icon a {
-    font-size: 30px;
-    text-decoration: none;
-    color: white;
-    margin-right: 100px;
-  }
-  .menu__icon .icon {
-    font-size: 30px;
-  }
-  .contain {
-    background-image: url("./images/vraisky.jpeg");
-    animation: moveBackground 50s infinite linear;
-    color: white;
-    text-align: center;
-    margin-top: 150px;
-    font-size: 40px;
-
-    .hand {
-      animation-duration: 2.1s;
-      animation-iteration-count: infinite;
-      animation-name: hand-animation;
-      transform-origin: 70% 70%;
-      display: inline-block;
-    }
-    .name,
-    .contain__text {
-      background-image: linear-gradient(30deg, red, purple);
-      color: transparent;
-      background-clip: text;
-    }
-    .contain__text {
-      overflow: hidden;
-      white-space: nowrap;
-      margin: 0 auto;
-      margin-top: 50px;
-      font-size: 40px;
-      animation: juniordevelopper 3s steps(50) forwards infinite,
-        blink-caret 0.2s step-end infinite alternate;
-    }
-    .contain__cards--img {
-      margin-top: 50px;
-      width: 500px;
-      height: 500px;
-    }
+  .logo__img {
+    height: 50px;
+    width: 50px;
+    margin-left: 100px;
   }
 }
+.menu-items {
+  display: none;
+}
+
+.menu__wrapper a {
+  font-size: 20px;
+  text-decoration: none;
+  color: white;
+  margin-right: 50px;
+}
+a:hover{
+  color: red;
+
+}
+.menu__wrapper .icon {
+  font-size: 20px;
+}
+.contain {
+  height: 100vh;
+  color: white;
+  text-align: center;
+  margin-top: 150px;
+  font-size: 40px;
+
+  .hand {
+    animation-duration: 2.1s;
+    animation-iteration-count: infinite;
+    animation-name: hand-animation;
+    display: inline-block;
+  }
+  .name,
+  .contain__text {
+    background-image: linear-gradient(30deg, red, purple);
+    color: transparent;
+    background-clip: text;
+  }
+  .contain__text {
+    overflow: hidden;
+    white-space: nowrap;
+    margin: 0 auto;
+    margin-top: 50px;
+    font-size: 40px;
+    animation: juniordevelopper 3s steps(50) forwards infinite,
+      blink-caret 0.2s step-end infinite alternate;
+  }
+  .contain__cards--img {
+    margin-top: 50px;
+    width: 500px;
+    height: 500px;
+  }
+}
+
 .about-me {
+  height: 100vh;
+  animation: moveBackground 50s infinite linear;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  .about-me__title{
+  .about-me__title {
     text-align: center;
     margin-bottom: 20px;
     font-size: 35px;
     font-weight: bolder;
     font-style: italic;
     background-image: linear-gradient(30deg, red, purple);
-      color: transparent;
-      background-clip: text;
+    color: transparent;
+    background-clip: text;
   }
 
   .about-me__card-1 {
@@ -107,12 +117,76 @@ body {
     }
   }
   .about-me__card-2 {
-    .about-me__img{
+    .about-me__img {
       width: 500px;
       height: 500px;
       border-radius: 50%;
       box-shadow: 2px 2px 10px 5px purple;
     }
+  }
+}
+.contact__title {
+  text-align: center;
+  margin-top: 100px;
+  font-size: 50px;
+  font-weight: bolder;
+  font-style: italic;
+  background-image: linear-gradient(30deg, red, purple);
+  color: transparent;
+  background-clip: text;
+}
+.contact{
+  height: 100vh;
+}
+.contact-wrapper{
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  .contact-card-1__title {
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+  }
+  .contact__text {
+    font-size: 20px;
+    margin-bottom: 20px;
+
+    p {
+      padding: 10px;
+    }
+  }
+  .icon{
+    font-size: 30px;
+    margin: 20px;
+  }
+  input{
+    width: 300px;
+    height: 40px;
+    margin:10px 0px;
+    box-shadow: 2px 2px 10px 2px purple;
+  }
+  textarea{
+    box-shadow: 2px 2px 10px 2px purple;
+  }
+}
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  height: 100px;
+  padding: 0px 20px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .icon{
+    font-size: 20px;
+    margin: 5px;
   }
 }
 
@@ -165,18 +239,35 @@ body {
     background-position: 100% 100%;
   }
 }
+
 @media (max-width: 768px) {
-  .menu__icon {
-    display: none;
+  .menu__icon--link .icon {
+    font-size: 50px;
+    width: 100px;
   }
-}
-.menu__icon--link .icon {
-  font-size: 50px;
-  width: 100px;
 }
 
 @media (min-width: 768px) {
-  .menu__icon .menu__incon--link {
+  .menu-items {
     display: block;
   }
+  .menu__icon--link {
+    display: none;
+  }
+  .about-me {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .contact-wrapper{
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+footer{
+  font-size: 30px;
+
+  .icon{
+    font-size: 30px;
+    margin: 10px;
+  }
+}
 }
