--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   background-image: url("./images/vraisky.jpeg");
   animation: moveBackground 50s infinite linear;
+  background-attachment: fixed;
   width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
@@ -20,7 +21,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  background-color: rgba(148, 113, 113, 0.107);
+  background-color: black;
   position: fixed;
   width: 100%;
   top: 0;
@@ -63,6 +64,7 @@ a:hover {
   animation-iteration-count: infinite;
   animation-name: hand-animation;
   display: inline-block;
+  z-index: -1;
 }
 .contain .name,
 .contain .contain__text {
@@ -85,9 +87,8 @@ a:hover {
 }
 
 .about-me {
-  height: 100vh;
   animation: moveBackground 50s infinite linear;
-  margin-top: 100px;
+  margin: 300px 0px 100px 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -103,22 +104,43 @@ a:hover {
   color: transparent;
   background-clip: text;
 }
+.about-me .about-me__text {
+  font-size: 20px;
+}
 .about-me .about-me__card-1 {
-  color: white;
   margin-bottom: 50px;
-  font-size: 25px;
-  word-spacing: 5px;
+  font-size: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 20px;
+  animation: box 4s infinite;
+}
+.about-me .about-me__card-1 .box {
+  background-image: linear-gradient(30deg, red, purple);
+  color: transparent;
+  background-clip: text;
+  height: 50px;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px 5px purple;
 }
 .about-me .about-me__card-1 .name {
   background-image: linear-gradient(30deg, red, purple);
   color: transparent;
   background-clip: text;
 }
-.about-me .about-me__card-2 .about-me__img {
+.about-me .about-me__card-2 {
   width: 500px;
   height: 500px;
   border-radius: 50%;
   box-shadow: 2px 2px 10px 5px purple;
+  object-fit: cover;
+  overflow: hidden;
+}
+.about-me .about-me__card-2 .about-me__img {
+  width: 100%;
+  height: 100%;
 }
 
 .contact__title {
@@ -134,6 +156,14 @@ a:hover {
 
 .contact {
   height: 100vh;
+}
+.contact .contact-card-2__button {
+  text-decoration: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 20px;
+  background-image: linear-gradient(30deg, red, purple);
 }
 
 .contact-wrapper {
@@ -167,6 +197,7 @@ a:hover {
 }
 .contact-wrapper textarea {
   box-shadow: 2px 2px 10px 2px purple;
+  margin-bottom: 10px;
 }
 
 footer {
@@ -174,7 +205,7 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: black;
-  height: 100px;
+  height: 80px;
   padding: 0px 20px;
   color: white;
   display: flex;
@@ -233,6 +264,17 @@ footer .icon {
     background-position: 100% 100%;
   }
 }
+@keyframes box {
+  0% {
+    transform: translateX(10px);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
 @media (max-width: 768px) {
   .menu__icon--link .icon {
     font-size: 50px;
@@ -249,6 +291,10 @@ footer .icon {
   .about-me {
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 50px;
+  }
+  .about-me .about-me__text {
+    font-size: 30px;
   }
   .contact-wrapper {
     flex-direction: row;
