--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@
 body {
   background-image: url("./images/vraisky.jpeg");
   animation: moveBackground 50s infinite linear;
+  background-attachment: fixed;
   width: 100%;
   height: 100vh;
   font-family: "Roboto", sans-serif;
@@ -20,7 +21,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 100px;
-  background-color: rgba(148, 113, 113, 0.107);
+  background-color: black;
   position: fixed;
   width: 100%;
   top: 0;
@@ -42,9 +43,8 @@ body {
   color: white;
   margin-right: 50px;
 }
-a:hover{
+a:hover {
   color: red;
-
 }
 .menu__wrapper .icon {
   font-size: 20px;
@@ -61,6 +61,7 @@ a:hover{
     animation-iteration-count: infinite;
     animation-name: hand-animation;
     display: inline-block;
+    z-index: -1;
   }
   .name,
   .contain__text {
@@ -85,9 +86,8 @@ a:hover{
 }
 
 .about-me {
-  height: 100vh;
   animation: moveBackground 50s infinite linear;
-  margin-top: 100px;
+  margin: 300px 0px 100px 0px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,13 +102,31 @@ a:hover{
     background-image: linear-gradient(30deg, red, purple);
     color: transparent;
     background-clip: text;
+
+  }
+  .about-me__text {
+    font-size: 20px;
   }
 
   .about-me__card-1 {
-    color: white;
     margin-bottom: 50px;
-    font-size: 25px;
-    word-spacing: 5px;
+    font-size: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: repeat(3,1fr);
+    gap: 20px;
+    animation: box 4s infinite;
+  
+
+    .box{
+      background-image: linear-gradient(30deg, red, purple);
+      color: transparent;
+      background-clip: text;
+      height: 50px;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 2px 2px 5px 5px purple;
+    }
 
     .name {
       background-image: linear-gradient(30deg, red, purple);
@@ -117,11 +135,16 @@ a:hover{
     }
   }
   .about-me__card-2 {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 10px 5px purple;
+    object-fit: cover;
+    overflow: hidden;
+
     .about-me__img {
-      width: 500px;
-      height: 500px;
-      border-radius: 50%;
-      box-shadow: 2px 2px 10px 5px purple;
+      width: 100%;
+      height: 100%;
     }
   }
 }
@@ -135,10 +158,19 @@ a:hover{
   color: transparent;
   background-clip: text;
 }
-.contact{
+.contact {
   height: 100vh;
+
+  .contact-card-2__button{
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 20px;
+    background-image: linear-gradient(30deg, red, purple);
+  }
 }
-.contact-wrapper{
+.contact-wrapper {
   color: white;
   display: flex;
   flex-direction: column;
@@ -158,33 +190,34 @@ a:hover{
       padding: 10px;
     }
   }
-  .icon{
+  .icon {
     font-size: 30px;
     margin: 20px;
   }
-  input{
+  input {
     width: 300px;
     height: 40px;
-    margin:10px 0px;
+    margin: 10px 0px;
     box-shadow: 2px 2px 10px 2px purple;
   }
-  textarea{
+  textarea {
     box-shadow: 2px 2px 10px 2px purple;
+    margin-bottom: 10px;
   }
 }
-footer{
+footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: black;
-  height: 100px;
+  height: 80px;
   padding: 0px 20px;
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  .icon{
+  .icon {
     font-size: 20px;
     margin: 5px;
   }
@@ -239,7 +272,17 @@ footer{
     background-position: 100% 100%;
   }
 }
-
+@keyframes box {
+  0% {
+    transform: translateX(10px);
+  }
+  50% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateX(10px);
+  }
+}
 @media (max-width: 768px) {
   .menu__icon--link .icon {
     font-size: 50px;
@@ -257,17 +300,22 @@ footer{
   .about-me {
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 50px;
+    .about-me__text {
+      font-size: 30px;
+    }
   }
-  .contact-wrapper{
+
+  .contact-wrapper {
     flex-direction: row;
     justify-content: space-evenly;
   }
-footer{
-  font-size: 30px;
-
-  .icon{
+  footer {
     font-size: 30px;
-    margin: 10px;
+
+    .icon {
+      font-size: 30px;
+      margin: 10px;
+    }
   }
-}
 }
