--- a/style.scss
+++ b/style.scss
@@ -26,6 +26,7 @@ body {
   width: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
 
   .logo__img {
     height: 50px;
@@ -33,6 +34,7 @@ body {
     margin-left: 100px;
   }
 }
+
 .menu-items {
   display: none;
 }
@@ -43,11 +45,13 @@ body {
   color: white;
   margin-right: 50px;
 }
-a:hover {
-  color: red;
-}
+
 .menu__wrapper .icon {
   font-size: 20px;
+}
+
+a:hover {
+  color: yellow;
 }
 .contain {
   height: 100vh;
@@ -86,15 +90,13 @@ a:hover {
 }
 
 .about-me {
+  height: 100vh;
   animation: moveBackground 50s infinite linear;
   margin: 300px 0px 100px 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  display: block;
 
   .about-me__title {
-    text-align: center;
+    padding-left: 300px;
     margin-bottom: 20px;
     font-size: 35px;
     font-weight: bolder;
@@ -102,7 +104,6 @@ a:hover {
     background-image: linear-gradient(30deg, red, purple);
     color: transparent;
     background-clip: text;
-
   }
   .about-me__text {
     font-size: 20px;
@@ -112,13 +113,14 @@ a:hover {
     margin-bottom: 50px;
     font-size: 20px;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(3,1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     gap: 20px;
+    width: 600px;
+    margin-left: 50px;
     animation: box 4s infinite;
-  
 
-    .box{
+    .box {
       background-image: linear-gradient(30deg, red, purple);
       color: transparent;
       background-clip: text;
@@ -141,10 +143,32 @@ a:hover {
     box-shadow: 2px 2px 10px 5px purple;
     object-fit: cover;
     overflow: hidden;
+    margin: auto;
 
     .about-me__img {
       width: 100%;
       height: 100%;
+    }
+  }
+}
+.Project {
+  h2 {
+    background-image: linear-gradient(30deg, red, purple);
+    color: transparent;
+    background-clip: text;
+    font-size: 35px;
+    text-align: center;
+  }
+  .Project__img {
+    display: grid;
+    img {
+      width: 500px;
+      height: 500px;
+      display: block;
+      margin: auto;
+      margin-top: 20px;
+      box-shadow: 2px 2px 10px 5px purple;
+      border-radius: 20px;
     }
   }
 }
@@ -161,7 +185,7 @@ a:hover {
 .contact {
   height: 100vh;
 
-  .contact-card-2__button{
+  .contact-card-2__button {
     text-decoration: none;
     color: white;
     padding: 10px 20px;
@@ -180,7 +204,7 @@ a:hover {
   .contact-card-1__title {
     font-size: 20px;
     margin-top: 30px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
   .contact__text {
     font-size: 20px;
@@ -198,13 +222,20 @@ a:hover {
     width: 300px;
     height: 40px;
     margin: 10px 0px;
-    box-shadow: 2px 2px 10px 2px purple;
-  }
-  textarea {
-    box-shadow: 2px 2px 10px 2px purple;
-    margin-bottom: 10px;
   }
 }
+input,
+textarea {
+  box-shadow: 2px 2px 10px 2px purple;
+  padding: 10px;
+  font-size: 20px;
+  font-style: italic;
+  border-radius: 10px;
+}
+.contact-card-2__form {
+  margin-bottom: 20px;
+}
+
 footer {
   position: fixed;
   bottom: 0;
@@ -298,14 +329,23 @@ footer {
     display: none;
   }
   .about-me {
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-top: 50px;
+    position: relative;
+
     .about-me__text {
       font-size: 30px;
     }
+    .about-me__card-2 {
+      position: absolute;
+      right: 200px;
+      margin-top: -300px;
+      width: 600px;
+      height: 600px;
+    }
   }
-
+  .Project__img {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
   .contact-wrapper {
     flex-direction: row;
     justify-content: space-evenly;
