--- a/style.scss
+++ b/style.scss
@@ -33,26 +33,23 @@ body {
     width: 50px;
     margin-left: 100px;
   }
+  .menu__wrapper a {
+    font-size: 20px;
+    text-decoration: none;
+    color: white;
+    margin-right: 50px;
+    transition: all 0.5s ease-out 0s;
+  }
+  .menu__wrapper .icon {
+    font-size: 20px;
+  }
+  .menu__wrapper a:hover {
+    border-bottom: 5px solid red;
+  }
 }
 
 .menu-items {
   display: none;
-}
-
-.menu__wrapper a {
-  font-size: 20px;
-  text-decoration: none;
-  color: white;
-  margin-right: 50px;
-}
-
-.menu__wrapper .icon {
-  font-size: 20px;
-}
-
-a:hover {
-  color: yellow;
-  animation-delay: 1s;
 }
 .contain {
   height: 100vh;
@@ -162,6 +159,10 @@ a:hover {
   }
   .Project__img {
     display: grid;
+    transition: all 3s ease-in-out;
+    animation: project-animation 5s ease infinite;
+    margin-top: 120px;
+
     img {
       width: 500px;
       height: 500px;
@@ -219,6 +220,9 @@ a:hover {
     font-size: 30px;
     margin: 20px;
   }
+  .icon:hover {
+    color: red;
+  }
   input {
     width: 300px;
     height: 40px;
@@ -252,6 +256,9 @@ footer {
   .icon {
     font-size: 20px;
     margin: 5px;
+  }
+  .icon:hover {
+    color: red;
   }
 }
 
@@ -313,6 +320,17 @@ footer {
   }
   100% {
     transform: translateX(10px);
+  }
+}
+@keyframes project-animation {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 @media (max-width: 768px) {
