--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   font-weight: 400;
   font-style: normal;
   background-color: black;
+  overflow-x: hidden;
 }
 
 .menu {
@@ -52,7 +53,6 @@ body {
 }
 
 .contain {
-  height: 100vh;
   color: white;
   text-align: center;
   margin-top: 150px;
@@ -86,12 +86,13 @@ body {
 }
 
 .about-me {
-  height: 100vh;
+  min-height: 600px;
   animation: moveBackground 50s infinite linear;
   margin: 300px 0px 100px 0px;
   display: block;
 }
 .about-me .about-me__title {
+  margin-top: 200px;
   padding-left: 300px;
   margin-bottom: 20px;
   font-size: 35px;
