--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ body {
   animation: moveBackground 50s infinite linear;
   background-attachment: fixed;
   width: 100%;
-  height: 100vh;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -131,7 +130,7 @@ body {
   transition: all 0.5s ease-out 0s;
 }
 .menu .menu__wrapper .icon {
-  font-size: 20px;
+  font-size: 50px;
 }
 .menu .menu__wrapper a:hover {
   border-bottom: 5px solid red;
@@ -170,8 +169,9 @@ body {
 }
 .contain .contain__cards--img {
   margin-top: 50px;
-  width: 500px;
+  width: 100%;
   height: 500px;
+  object-fit: cover;
 }
 
 .about-me {
@@ -198,12 +198,9 @@ body {
   margin-bottom: 50px;
   font-size: 20px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  gap: 20px;
-  width: 600px;
+  grid-template-columns: repeat(3, 200px);
   margin-left: 50px;
-  animation: box 4s infinite;
+  gap: 20px;
   margin-bottom: 100px;
 }
 .about-me .about-me__card-1 .box {
@@ -242,7 +239,6 @@ body {
   text-align: center;
 }
 .project .project__wrapper {
-  display: grid;
   transition: all 3s ease-in-out;
   margin-top: 20px;
 }
@@ -269,6 +265,7 @@ body {
 
 .contact {
   min-height: 100vh;
+  padding-bottom: 100px;
 }
 .contact .contact-card-2__button {
   text-decoration: none;
@@ -306,7 +303,7 @@ body {
   color: red;
 }
 .contact-wrapper input {
-  width: 300px;
+  width: 100%;
   height: 40px;
   margin: 10px 0px;
 }
@@ -325,11 +322,17 @@ textarea {
 }
 
 @media (min-width: 768px) {
-  .menu-items {
+  .menu__wrapper .menu-items {
     display: block;
   }
-  .menu__icon--link {
+  .menu__wrapper .menu__icon--link {
     display: none;
+  }
+  .menu__wrapper .menu-items .icon {
+    font-size: 20px;
+  }
+  .contain .contain__cards--img {
+    width: 500px;
   }
   .about-me {
     position: relative;
@@ -337,10 +340,14 @@ textarea {
   .about-me .about-me__text {
     font-size: 30px;
   }
+  .about-me .about-me__card-1 {
+    width: 600px;
+    animation: box 4s infinite;
+  }
   .about-me .about-me__card-2 {
     position: absolute;
     right: 200px;
-    margin-top: -300px;
+    margin-top: -500px;
     width: 600px;
     height: 600px;
   }
@@ -350,12 +357,12 @@ textarea {
     margin: 100px;
     animation: project-animation 5s ease infinite;
   }
-  .project__title {
-    margin-top: 100px !important;
-  }
   .contact-wrapper {
     flex-direction: row;
     justify-content: space-evenly;
+  }
+  .contact-wrapper input {
+    width: 300px;
   }
   footer {
     font-size: 30px;
