--- a/style.css
+++ b/style.css
@@ -73,105 +73,21 @@ footer {
   width: 100%;
   background-color: black;
   height: 80px;
-  padding: 0px 20px;
+  padding: 0px 10px 0px 10px;
   color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 footer .icon {
-  font-size: 20px;
+  font-size: 12px;
   margin: 5px;
 }
 footer .icon:hover {
   color: red;
 }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  background-image: url("./images/vraisky.jpeg");
-  animation: moveBackground 50s infinite linear;
-  background-attachment: fixed;
-  width: 100%;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  background-color: black;
-  overflow-x: hidden;
-}
-
-.menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100px;
-  background-color: black;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-.menu .logo__img {
-  height: 50px;
-  width: 50px;
-  margin-left: 100px;
-}
-.menu .menu__wrapper a {
-  font-size: 20px;
-  text-decoration: none;
-  color: white;
-  margin-right: 50px;
-  transition: all 0.5s ease-out 0s;
-}
-.menu .menu__wrapper .icon {
-  font-size: 50px;
-}
-.menu .menu__wrapper a:hover {
-  border-bottom: 5px solid red;
-}
-
-.menu-items {
-  display: none;
-}
-
-.contain {
-  color: white;
-  text-align: center;
-  margin-top: 150px;
-  font-size: 40px;
-}
-.contain .hand {
-  animation-duration: 2.1s;
-  animation-iteration-count: infinite;
-  animation-name: hand-animation;
-  display: inline-block;
-  z-index: -1;
-}
-.contain .name,
-.contain .contain__text {
-  background-image: linear-gradient(30deg, red, purple);
-  color: transparent;
-  background-clip: text;
-}
-.contain .contain__text {
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0 auto;
-  margin-top: 50px;
-  font-size: 40px;
-  animation: juniordevelopper 3s steps(50) forwards infinite, blink-caret 0.2s step-end infinite alternate;
-}
-.contain .contain__cards--img {
-  margin-top: 50px;
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
+footer p {
+  font-size: 15px;
 }
 
 .about-me {
@@ -179,11 +95,13 @@ body {
   animation: moveBackground 50s infinite linear;
   margin: 300px 0px 100px 0px;
   display: block;
+  margin-left: 60px;
+  margin-top: 50px;
 }
 .about-me .about-me__title {
   margin-top: 200px;
-  padding-left: 300px;
   margin-bottom: 20px;
+  text-align: center;
   font-size: 35px;
   font-weight: bolder;
   font-style: italic;
@@ -198,8 +116,7 @@ body {
   margin-bottom: 50px;
   font-size: 20px;
   display: grid;
-  grid-template-columns: repeat(3, 200px);
-  margin-left: 50px;
+  grid-template-columns: repeat(2, 40%);
   gap: 20px;
   margin-bottom: 100px;
 }
@@ -218,11 +135,9 @@ body {
   background-clip: text;
 }
 .about-me .about-me__card-2 {
-  width: 500px;
-  height: 500px;
+  width: 90%;
   border-radius: 50%;
   box-shadow: 2px 2px 10px 5px purple;
-  object-fit: cover;
   overflow: hidden;
   margin: auto;
 }
@@ -231,25 +146,51 @@ body {
   height: 100%;
 }
 
-.project h2 {
-  background-image: linear-gradient(30deg, red, purple);
-  color: transparent;
-  background-clip: text;
-  font-size: 35px;
-  text-align: center;
+.contact-wrapper {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 60px;
 }
-.project .project__wrapper {
-  transition: all 3s ease-in-out;
-  margin-top: 20px;
+.contact-wrapper .contact-card-1__title {
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
-.project .project__wrapper img {
-  width: 500px;
-  height: 500px;
-  display: block;
-  margin: auto;
-  margin-top: 20px;
-  box-shadow: 2px 2px 10px 5px purple;
-  border-radius: 20px;
+.contact-wrapper .contact__text {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.contact-wrapper .contact__text p {
+  padding: 10px;
+}
+.contact-wrapper .icon {
+  font-size: 30px;
+  margin: 20px;
+}
+.contact-wrapper .icon:hover {
+  color: red;
+}
+.contact-wrapper input {
+  width: 90%;
+  height: 40px;
+  margin: 10px 0px;
+}
+
+input,
+textarea {
+  width: 90%;
+  box-shadow: 2px 2px 10px 2px purple;
+  padding: 10px;
+  font-size: 20px;
+  font-style: italic;
+  border-radius: 10px;
+}
+
+.contact-card-2__form {
+  margin-bottom: 20px;
 }
 
 .contact__title {
@@ -276,60 +217,61 @@ body {
   background-image: linear-gradient(30deg, red, purple);
 }
 
-.contact-wrapper {
+.contain {
   color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
+  margin-top: 150px;
+  font-size: 25px;
 }
-.contact-wrapper .contact-card-1__title {
-  font-size: 20px;
-  margin-top: 30px;
-  margin-bottom: 30px;
+.contain .hand {
+  animation-duration: 2.1s;
+  animation-iteration-count: infinite;
+  animation-name: hand-animation;
+  display: inline-block;
+  z-index: -1;
 }
-.contact-wrapper .contact__text {
-  font-size: 20px;
-  margin-bottom: 20px;
+.contain .name,
+.contain .contain__text {
+  background-image: linear-gradient(30deg, red, purple);
+  color: transparent;
+  background-clip: text;
 }
-.contact-wrapper .contact__text p {
-  padding: 10px;
+.contain .contain__text {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  margin-top: 50px;
+  font-size: 40px;
+  animation: juniordevelopper 3s steps(50) forwards infinite, blink-caret 0.2s step-end infinite alternate;
 }
-.contact-wrapper .icon {
-  font-size: 30px;
-  margin: 20px;
-}
-.contact-wrapper .icon:hover {
-  color: red;
-}
-.contact-wrapper input {
-  width: 100%;
-  height: 40px;
-  margin: 10px 0px;
-}
-
-input,
-textarea {
-  box-shadow: 2px 2px 10px 2px purple;
-  padding: 10px;
-  font-size: 20px;
-  font-style: italic;
-  border-radius: 10px;
-}
-
-.contact-card-2__form {
-  margin-bottom: 20px;
+.contain .contain__cards--img {
+  margin-top: 50px;
+  width: 90%;
+  height: 500px;
+  object-fit: cover;
 }
 
 @media (min-width: 768px) {
-  .menu__wrapper .menu-items {
-    display: block;
-  }
-  .menu__wrapper .menu__icon--link {
+  .menu .menu__icon--link .icon {
     display: none;
   }
-  .menu__wrapper .menu-items .icon {
+  .menu .menu-items {
+    display: block;
+  }
+  .menu .menu__wrapper a {
     font-size: 20px;
+    text-decoration: none;
+    color: white;
+    margin-right: 50px;
+  }
+  .menu .menu__wrapper .icon {
+    font-size: 20px;
+  }
+  .menu .menu__wrapper a:hover {
+    border-bottom: 5px solid red;
+  }
+  .contain {
+    font-size: 40px;
   }
   .contain .contain__cards--img {
     width: 500px;
@@ -343,25 +285,38 @@ textarea {
   .about-me .about-me__card-1 {
     width: 600px;
     animation: box 4s infinite;
+    margin-left: 100px;
   }
   .about-me .about-me__card-2 {
     position: absolute;
     right: 200px;
-    margin-top: -500px;
-    width: 600px;
+    margin-top: -600px;
+    width: 500px;
     height: 600px;
   }
-  .project__wrapper {
+  .about-me .about-me__title {
+    margin-left: -800px;
+  }
+  .project {
+    height: 100vh;
+  }
+  .project .project__wrapper {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    margin: 100px;
     animation: project-animation 5s ease infinite;
+    width: 800px;
+    height: 200px;
+    margin-bottom: 220px;
+    margin-left: 100px;
   }
-  .contact-wrapper {
+  .contact {
+    margin-top: 100px;
+  }
+  .contact .contact-wrapper {
     flex-direction: row;
     justify-content: space-evenly;
   }
-  .contact-wrapper input {
+  .contact .contact-wrapper input {
     width: 300px;
   }
   footer {
@@ -371,6 +326,75 @@ textarea {
     font-size: 30px;
     margin: 10px;
   }
+  footer p {
+    font-size: 20px;
+  }
+}
+.project {
+  margin-left: 60px;
+}
+.project h2 {
+  background-image: linear-gradient(30deg, red, purple);
+  color: transparent;
+  background-clip: text;
+  font-size: 35px;
+  text-align: center;
+}
+.project .project__wrapper {
+  transition: all 3s ease-in-out;
+  margin-top: 20px;
+}
+.project .project__wrapper img {
+  width: 90%;
+  height: 100%;
+  margin-top: 20px;
+  box-shadow: 2px 2px 10px 5px purple;
+  border-radius: 20px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url("./images/vraisky.jpeg");
+  animation: moveBackground 50s infinite linear;
+  background-attachment: fixed;
+  width: 90%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background-color: black;
+  overflow-x: hidden;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  background-color: black;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.menu .logo__img {
+  height: 50px;
+  width: 50px;
+  margin-left: 100px;
+}
+.menu .menu__icon--link {
+  font-size: 50px;
+  margin-right: 100px;
+  color: white;
+}
+
+.menu-items {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
