--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,10 @@
 @import "keyframes.scss";
 @import "footer.scss";
+@import "about-me.scss";
+@import "contact.scss";
+@import "contain.scss";
+@import "media.scss";
+@import "project.scss";
 
 * {
   margin: 0;
@@ -10,8 +15,7 @@ body {
   background-image: url("./images/vraisky.jpeg");
   animation: moveBackground 50s infinite linear;
   background-attachment: fixed;
-  width: 100%;
-
+  width: 90%;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
@@ -35,266 +39,13 @@ body {
     width: 50px;
     margin-left: 100px;
   }
-  .menu__wrapper a {
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-    margin-right: 50px;
-    transition: all 0.5s ease-out 0s;
-  }
-  .menu__wrapper .icon {
-    font-size: 50px;
-  }
-  .menu__wrapper a:hover {
-    border-bottom: 5px solid red;
-  }
+ .menu__icon--link{
+  font-size: 50px;
+  margin-right: 100px;
+  color: white;
+ }
 }
 .menu-items {
   display: none;
 }
-.contain {
-  color: white;
-  text-align: center;
-  margin-top: 150px;
-  font-size: 40px;
 
-  .hand {
-    animation-duration: 2.1s;
-    animation-iteration-count: infinite;
-    animation-name: hand-animation;
-    display: inline-block;
-    z-index: -1;
-  }
-  .name,
-  .contain__text {
-    background-image: linear-gradient(30deg, red, purple);
-    color: transparent;
-    background-clip: text;
-  }
-  .contain__text {
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 auto;
-    margin-top: 50px;
-    font-size: 40px;
-    animation: juniordevelopper 3s steps(50) forwards infinite,
-      blink-caret 0.2s step-end infinite alternate;
-  }
-  .contain__cards--img {
-    margin-top: 50px;
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-  }
-}
-.about-me {
-  min-height: 600px;
-  animation: moveBackground 50s infinite linear;
-  margin: 300px 0px 100px 0px;
-  display: block;
-
-  .about-me__title {
-    margin-top: 200px;
-    padding-left: 300px;
-    margin-bottom: 20px;
-    font-size: 35px;
-    font-weight: bolder;
-    font-style: italic;
-    background-image: linear-gradient(30deg, red, purple);
-    color: transparent;
-    background-clip: text;
-  }
-  .about-me__text {
-    font-size: 20px;
-  }
-  .about-me__card-1 {
-    margin-bottom: 50px;
-    font-size: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 200px);
-    margin-left: 50px;
-    gap: 20px;
-    margin-bottom: 100px;
-
-    .box {
-      background-image: linear-gradient(30deg, red, purple);
-      color: transparent;
-      background-clip: text;
-      height: 50px;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 2px 2px 5px 5px purple;
-    }
-    .name {
-      background-image: linear-gradient(30deg, red, purple);
-      color: transparent;
-      background-clip: text;
-    }
-  }
-  .about-me__card-2 {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 10px 5px purple;
-    object-fit: cover;
-    overflow: hidden;
-    margin: auto;
-
-    .about-me__img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-.project {
-  h2 {
-    background-image: linear-gradient(30deg, red, purple);
-    color: transparent;
-    background-clip: text;
-    font-size: 35px;
-    text-align: center;
-  }
-  .project__wrapper {
-    transition: all 3s ease-in-out;
-    margin-top: 20px;
-
-    img {
-      width: 500px;
-      height: 500px;
-      display: block;
-      margin: auto;
-      margin-top: 20px;
-      box-shadow: 2px 2px 10px 5px purple;
-      border-radius: 20px;
-    }
-  }
-}
-.contact__title {
-  text-align: center;
-  margin-top: 100px;
-  font-size: 50px;
-  font-weight: bolder;
-  font-style: italic;
-  background-image: linear-gradient(30deg, red, purple);
-  color: transparent;
-  background-clip: text;
-}
-.contact {
-  min-height: 100vh;
-  padding-bottom: 100px;
-
-  .contact-card-2__button {
-    text-decoration: none;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 10px;
-    font-size: 20px;
-    background-image: linear-gradient(30deg, red, purple);
-  }
-}
-.contact-wrapper {
-  color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  .contact-card-1__title {
-    font-size: 20px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
-  .contact__text {
-    font-size: 20px;
-    margin-bottom: 20px;
-
-    p {
-      padding: 10px;
-    }
-  }
-  .icon {
-    font-size: 30px;
-    margin: 20px;
-  }
-  .icon:hover {
-    color: red;
-  }
-  input {
-    width: 100%;
-    height: 40px;
-    margin: 10px 0px;
-  }
-}
-input,
-textarea {
-  box-shadow: 2px 2px 10px 2px purple;
-  padding: 10px;
-  font-size: 20px;
-  font-style: italic;
-  border-radius: 10px;
-}
-.contact-card-2__form {
-  margin-bottom: 20px;
-}
-
-@media (min-width: 768px){
-  .menu__wrapper {
-    .menu-items {
-      display: block;
-    }
-    .menu__icon--link {
-      display: none;
-    }
-    .menu-items .icon {
-      font-size: 20px;
-    }
-  }
-  .contain{
-    .contain__cards--img{
-      width: 500px;
-    }
-  }
-  
-
-  .about-me {
-    position: relative;
-
-    .about-me__text {
-      font-size: 30px;
-    }
-    .about-me__card-1 {
-      width: 600px;
-      animation: box 4s infinite;
-    }
-    .about-me__card-2 {
-      position: absolute;
-      right: 200px;
-      margin-top: -500px;
-      width: 600px;
-      height: 600px;
-    }
-  }
-  .project__wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    margin: 100px;
-    animation: project-animation 5s ease infinite;
-  }
-  .contact-wrapper {
-    flex-direction: row;
-    justify-content: space-evenly;
-
-    input {
-      width: 300px;
-    }
-  }
-
-  footer {
-    font-size: 30px;
-
-    .icon {
-      font-size: 30px;
-      margin: 10px;
-    }
-  }
-}
